--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,22 +8,33 @@
     <title>Tudulist</title>
   </head>
   <body>
-    <form action="/create" method="post">
-      <input
-        type="text"
-        name="task"
-        id="task"
-        placeholder="Insira uma tarefa"
-      />
-      <button id="addButton" type="submit">Adicionar</button>
-    </form>
+    <header>
 
-    <ul>
-      <% tasklist.forEach( (task ) => { %>
-      <li><%= task.task %> | <%= task.date.toLocaleDateString( 'pt-BR') %></li>
-      <% }) %>
-    </ul>
-
+      <% if (task == null) { %>
+          <form action="/create" method="post">
+            <input type="text" name="task" id="task" placeholder="Nova tarefa">
+            <button id="addButton" type="submit">Adicionar</button>
+          </form> 
+      <% } else { %>
+          <form action="/" method="post">
+            <input type="text" name="task" id="task" value="<%= task.task %>">
+            <button id="addButton" type="submit">Atualizar</button>
+          </form>
+      <% } %>
+    </header>
+  
+    <section id="tasks">
+        <ul>
+          <% tasklist.forEach( (task ) => { %>
+          <li>
+              <%= task.task %> | <%= task.date.toLocaleDateString( 'pt-BR') %>
+              <a href="/getById/<%= task._id%>">Editar</a>
+              <a href="">Apagar</a>
+                
+            </li>
+          <% }) %>
+        </ul>
+  </section>
     <script src="script.js"></script>
   </body>
 </html>
