--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,100 @@
-h1 {
-     color:red
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: Roboto, Arial;
+}
+
+body {
+  background-color: #202024;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+}
+
+header {
+  background-color: #005290;
+  padding: 3rem;
+  margin: 0.5rem;
+  text-align: center;
+}
+
+header h1 {
+  padding-bottom: 3rem;
+}
+
+input {
+  margin: 0;
+  border: none;
+  border-radius:0;
+  width: 70%;
+  padding: .6rem;
+  font-size: 1rem;
+  outline: none;
+  background-color: #202024;
+  color: #fff;
+}
+
+button {
+     padding: .6rem;
+     width: 22%;
+     background-color: #202024;
+     color: rgb(109,109,109);
+     text-align: center;
+     font-size: 1rem;
+     cursor: pointer;
+     border-radius: 0;
+     border: none;
+     outline: none;
+     transition: all .1s ease-in-out
+     
+}
+
+button:hover {
+     background-color: green;
+     color:white;
+
+}
+
+section#tasks {
+     margin: .5rem;
+}
+
+ul {
+     list-style: none;
+}
+
+ul li {
+     position: relative;
+     padding: 0 2rem 0 1rem;
+     background-color: rgb(22, 22, 24);
+     text-decoration: none;
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     flex-wrap: wrap;
+     font-size: 1.3rem;
+}
+
+ul li a{
+     text-decoration: none;
+     color: white;
+}
+
+ul li span {
+     color: gray;
+     font-style: italic;
+     font-size: .8rem;
+     padding: 1rem
+}
+
+ul li div {
+     display: flex;
+     align-items: center;
+     flex-wrap: wrap;
+}
+
+ul li :nth-child(odd){
+     background-color: #272727;
 }
