--- a/public/style.css
+++ b/public/style.css
@@ -27,9 +27,9 @@ header h1 {
 input {
   margin: 0;
   border: none;
-  border-radius:0;
+  border-radius: 0;
   width: 70%;
-  padding: .6rem;
+  padding: 0.6rem;
   font-size: 1rem;
   outline: none;
   background-color: #202024;
@@ -37,64 +37,187 @@ input {
 }
 
 button {
-     padding: .6rem;
-     width: 22%;
-     background-color: #202024;
-     color: rgb(109,109,109);
-     text-align: center;
-     font-size: 1rem;
-     cursor: pointer;
-     border-radius: 0;
-     border: none;
-     outline: none;
-     transition: all .1s ease-in-out
-     
+  padding: 0.6rem;
+  width: 22%;
+  background-color: #202024;
+  color: rgb(109, 109, 109);
+  text-align: center;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 0;
+  border: none;
+  outline: none;
+  transition: all 0.1s ease-in-out;
 }
 
 button:hover {
-     background-color: green;
-     color:white;
-
+  background-color: green;
+  color: white;
 }
 
 section#tasks {
-     margin: .5rem;
+  margin: 0.5rem;
 }
 
 ul {
-     list-style: none;
+  list-style: none;
 }
 
 ul li {
-     position: relative;
-     padding: 0 2rem 0 1rem;
-     background-color: rgb(22, 22, 24);
-     text-decoration: none;
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     flex-wrap: wrap;
-     font-size: 1.3rem;
+  position: relative;
+  padding: 0.5rem;
+  background-color: rgb(22, 22, 24);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 1.3rem;
 }
 
-ul li a{
-     text-decoration: none;
-     color: white;
+ul li a {
+  text-decoration: none;
+  color: white;
 }
 
 ul li span {
-     color: gray;
-     font-style: italic;
-     font-size: .8rem;
-     padding: 1rem
+  color: gray;
+  font-style: italic;
+  font-size: 0.8rem;
+  padding: 1rem;
 }
 
 ul li div {
-     display: flex;
-     align-items: center;
-     flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-ul li :nth-child(odd){
-     background-color: #272727;
+ul li:nth-child(odd) {
+  background-color: rgb(51, 48, 48);
+}
+
+ul li:hover {
+  background: gray;
+}
+
+a.btnUpdate {
+  padding: 1rem;
+  text-decoration: none;
+  color: #ccc;
+  transition: all 0.3s ease-in-out;
+}
+
+a.btnUpdate:hover {
+  background: #3643f4;
+  color: #fff;
+}
+
+a.btnDelete {
+  padding: 1rem;
+  text-decoration: none;
+  color: #ccc;
+  transition: all 0.3s ease-in-out;
+}
+
+a.btnDelete:hover {
+  background: #f44386;
+  color: #fff;
+}
+
+section#modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #00000080;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: auto;
+}
+
+div#card {
+  width: 30rem;
+  position: relative;
+  background-color: #202024;
+}
+
+div#head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem;
+}
+
+div#card h2 {
+  padding: 2rem;
+  margin: 0;
+}
+
+div#card a#close {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5rem;
+  transition: all 0.3s ease-in-out;
+}
+
+div#card a#close:hover {
+  background-color: red;
+  border-radius: 5rem;
+  padding: 0 0.5rem;
+}
+
+div#card hr {
+  width: 90%;
+  margin: 0 auto;
+}
+
+div#card p {
+  padding: 1.5rem;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+div#btns {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: 1.5rem;
+}
+
+div#btns a {
+     text-decoration: none;
+     padding: .5rem;
+     width: 7rem;
+     text-align: center;
+     background-color: #202024;
+     font-size: 1.5rem;
+}
+
+div#btns a#btnNot{
+     color:white;
+     border: solid 1px red;
+     margin-right: 1rem;
+     transition: all .3s ease-in-out;
+}
+
+div#btns a#btnNot:hover{
+     background-color:red;
+     color: white;
+
+}
+
+div#btns a#btnYes{
+     color:green;
+     border: solid 1px green;
+     transition: all .3s ease-in-out;
+}
+
+div#btns a#btnYes:hover{
+     background-color:green;
+     color: white;
 }
