--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,13 @@
     <title>Tudulist</title>
   </head>
   <body>
+    <% if( message != "" ) { %>
+    <section class="message message-<%= type%>">
+      <p><%= message%></p>
+
+      <span id="closeMessage"><i class="bi bi-x"></i></span>
+    </section>
+    <%} %>
     <header>
 
       <% if (task == null) { %>
