--- a/public/style.css
+++ b/public/style.css
@@ -221,3 +221,39 @@ div#btns a#btnYes:hover{
      background-color:green;
      color: white;
 }
+
+.message {
+  padding: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+  text-align: center;
+  font-size: 1.1rem;
+  font-weight: 600;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.message-danger {
+  background-color: red;
+  color: white;
+}
+
+.message-success {
+  background-color: rgb(191, 203, 167);
+  color: green
+}
+
+span#closeMessage {
+  font-size: 2rem;
+  cursor: pointer;
+  transition: .3s;
+  padding-left: 2rem;
+}
+
+span#closeMessage:hover {
+  color: yellow;
+  font-size: 2.5rem;
+}
