--- a/public/style.css
+++ b/public/style.css
@@ -77,11 +77,12 @@ ul li {
 
 ul li a {
   text-decoration: none;
-  color: white;
+  color: #fff;
+  padding-left: 2rem;
 }
 
 ul li span {
-  color: gray;
+  color: rgb(44, 35, 173);
   font-style: italic;
   font-size: 0.8rem;
   padding: 1rem;
@@ -256,4 +257,33 @@ span#closeMessage {
 span#closeMessage:hover {
   color: yellow;
   font-size: 2.5rem;
+}
+
+ul li.check-true {
+  background:#888888;
+  color: #fff;
+  text-decoration: line-through;
+}
+
+ul li a.check-true::before {
+  content: "";
+  position: absolute;
+  border: #fff solid;
+  top: 20px;
+  left: 16px;
+  height: 15px;
+  width: 7px;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+ul li a.check-false::before {
+  content: "";
+  position: absolute;
+  border: #fff solid;
+  top: 25px;
+  left: 16px;
+  height: 13px;
+  width:  13px;
+  border-width: 2px;
 }
