--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,9 @@
   <body>
     <% if( message != "" ) { %>
     <section class="message message-<%= type%>">
-      <p><%= message%></p>
+      <p>
+        <%= message%>
+      </p>
 
       <span id="closeMessage"><i class="bi bi-x"></i></span>
     </section>
